<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.154"
        app:srcCompat="@drawable/icon23" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <Button
            android:id="@+id/button"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="350dp"
            android:layout_height="64dp"
            android:layout_margin="10dp"
            android:background="#3F3064"
            android:cursorVisible="false"
            android:onClick="supervisor"
            android:text="@string/Supervisor"
            android:textColor="#FEFEFE"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button2"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="350dp"
            android:layout_height="64dp"
            android:layout_margin="10dp"
            android:background="#3F3064"
            android:onClick="worker"
            android:text="LOGIN AS WORKER"
            android:textColor="#FFFFFF"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button19"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="350dp"
            android:layout_height="64dp"
            android:layout_margin="10dp"
            android:background="#3F3064"
            android:onClick="manager"
            android:text="@string/Manager"
            android:textColor="#FFFFFF"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button16"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="350dp"
            android:layout_height="64dp"
            android:layout_margin="10dp"
            android:background="#3F3064"
            android:onClick="user"
            android:text="LOGIN AS USER"
            android:textColor="#FFFFFF"
            android:textStyle="bold" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>